--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-notifier": "^1.13.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "imask": "^6.4.2"
+  },
   "browserslist": [
     "defaults"
   ]
