--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "webpack-notifier": "^1.13.0"
   },
   "dependencies": {
-    "imask": "^6.4.2"
+    "imask": "^6.4.2",
+    "simplebar": "^5.3.8"
   },
   "browserslist": [
     "defaults"
