--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-notifier": "^1.13.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "imask": "^6.4.2",
     "simplebar": "^5.3.8"
   },
